EPMKHRDMH-236: BUG > Wrong value and alignment of progress labels on todo list

--- a/app/public/modules/tasks/less/taskList.less
+++ b/app/public/modules/tasks/less/taskList.less
@@ -133,4 +133,14 @@ ol, ul, li {
 	&-priority-4 { color: #676a6c; }
 }
 
+.task-list-item {
+  .task-name {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	max-width: 75%;
+	display: inline-block;
+	overflow: hidden;
+  }
+}
+
 
